cmake_minimum_required(VERSION 3.8)

project(cilisp)

set(CMAKE_C_STANDARD 11)

SET(CMAKE_C_FLAGS "-m64 -g -O0 -D_DEBUG -Wall")

set(SOURCE_FILES
        src/ciLisp.c
        ${CMAKE_CURRENT_BINARY_DIR}/ciLispScanner.c
        ${CMAKE_CURRENT_BINARY_DIR}/ciLispParser.c
        )

include_directories(AFTER src ${CMAKE_CURRENT_BINARY_DIR})

find_package(BISON)
find_package(FLEX)

BISON_TARGET(ciLispParser src/ciLisp.y ${CMAKE_CURRENT_BINARY_DIR}/ciLispParser.c VERBOSE)
FLEX_TARGET(ciLispScanner src/ciLisp.l ${CMAKE_CURRENT_BINARY_DIR}/ciLispScanner.c)

ADD_FLEX_BISON_DEPENDENCY(ciLispScanner ciLispParser)

add_executable(
        cilisp
        ${SOURCE_FILES}
        ${BISON_ciLispParser_OUTPUTS}
        ${FLEX_ciLispScanner_OUTPUTS}
)

target_link_libraries(cilisp m)